# lxp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: syscall-compat.md
fuzz/: CMakeLists.txt  README.md  fuzz_common.h  fuzz_stubs.c  harness_9p.c  harness_cpio.c  harness_etrel.c  harness_fdpic.c  harness_path.c  harness_syscall.c  replay_main.c
fuzz/corpus/9p/: rgetattr  rlerror  rread  rreaddir
fuzz/corpus/cpio/: minimal.cpio
fuzz/corpus/fdpic/: regress_dynwalk_oob.elf  regress_memset_underflow.elf
fuzz/corpus/path/: p00  p01  p02  p03  p04  p05  p06  p08
fuzz/corpus/syscall/: regress_procfs_pidovf  regress_statx_path
fuzz/dict/: cpio.dict  elf.dict
fuzz/tools/: gen_seeds.sh
include/lxp/: lxp.h  lxp_arena.h  lxp_config.h  lxp_dev.h  lxp_disp_ops.h  lxp_latency.h  lxp_loader.h  lxp_net.h  lxp_net_ops.h  lxp_netfs.h  lxp_port.h  lxp_pty.h  lxp_run.h  lxp_seam.h  lxp_stats.h  lxp_syscall.h  lxp_types.h
ports/posix/: lxp_port_posix.c
ports/qemu-mps2/: .gitignore  README.md  boot.c  build.sh  engine.c  fetch-deps.sh  run.sh
ports/qemu-mps2/board/: FreeRTOSConfig.h  mps2_an500.ld
ports/qemu-mps2/guest/: child.c  fpcheck.c  futex.c  hello.c  init.c  lxpsys.h  mkrootfs_m3.sh  rootfs.cpio  rootfs_m3.cpio  spin.c  syscheck.c  vforkx.c
scripts/: check-decoupled.sh  gate-build.sh
scripts/syscalls/: arm-eabi.tbl  check-syscalls.sh  dispositions.tsv
src/: lxp_arena.c  lxp_internal.h  lxp_latency.c  lxp_loader.c  lxp_pool.h  lxp_run.c  lxp_run_internal.h  lxp_signal.c  lxp_stats.c  lxp_syscall.c  lxp_vfs.h
src/dev/: lxp_dev.c  lxp_dev_dma2d.c  lxp_dev_fb.c  lxp_dev_input.c  lxp_uapi.h
src/fs/: lxp_path.c  lxp_path.h  lxp_pipe.c  lxp_pipe.h  lxp_ring.h  lxp_tmpfs.c  lxp_tmpfs.h
src/net/: lxp_net.c
src/netfs/: lxp_netfs.c
src/proc/: lxp_procfs.c  lxp_procfs.h
src/pty/: lxp_pty.c
tests/: CMakeLists.txt  stub_lnx_run.c  stub_main.c
tests/framework/: lxp_proc_fixture.h  lxp_test.h  suites.inc
tests/suites/: test_arena.c  test_fs.c  test_linux_dev.c  test_linux_net.c  test_linux_netfs.c  test_linux_pty.c  test_linux_syscall.c  test_loader.c  test_loader_fdpic.c  test_overflow.c  test_run_coord.c  test_signal.c  test_syscall_conformance.c
